--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Travel Friend</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -24,7 +24,7 @@
 
 
     <style type="text/css">
-      /* Large desktop */
+/*      /* Large desktop 
       @media (min-width: 980px) { 
         body {
          padding-top: 60px;
@@ -102,7 +102,7 @@
       .footer a {
         color: #ccccff;
       }
-
+*/
     </style>
 
 
@@ -124,7 +124,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Travel Friend</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -145,19 +145,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Travel Friend </h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Enjoy your vacations, learn around you, find the places.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://lisbonsurfhouse.com/uploads/gallery/Lisboa/Gallery-Lisbon-The-Seaside.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -212,7 +212,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://www.arrivalguides.com/Content/img/Destinations/lisbon/doandsee/experience_lisbon_walk/urbanadventuresLisbon.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -248,7 +248,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://twovacationsayear.files.wordpress.com/2011/11/img_8045.jpg "> <!--http://placehold.it/480x300"-->
         </div>
       </div>
 
